# A-maze-ing

./: Makefile  README.md  Readme.md  config.txt  main.py  maze_generator.py  mazegen-1.0.0-py3-none-any.whl  to-do.txt
Maze/: __init__.py  cell.py  directions.py
app/: __init__.py  config.py  output.py
fun/: .gitignore  Makefile  Readme.md  a_maze_ing.py  config.txt  maze_generation.py  to-do.txt  turbo_claude_maze.py
fun/cheat/: README.md  __init__.py  __main__.py  animation.py  app.py  colors.py  data_model.py  fileio.py  generation.py  obstacle.py  render.py  solving.py
teste/: .gitignore  Makefile  README.md  a_maze_ing.py  mazegen.py  pyproject.toml  requirements.txt  setup.cfg
teste/app/: display.py
teste/tests/: __init__.py  test_config.py  test_generator.py
